fixed fading in/out collapsing

--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,7 @@
 	border-radius: 25px;
     margin: 20px;
 	background-color: #F5F5F5;
+    min-height: 60px;
 }
 
 .mess h1 {
